# ROS2_ViconDroneCtrl

./: .gitignore  .gitmodules  README.md  position_data.csv  requirements.txt  run-demo.sh  stream_vicon_poses_to_px4.sh
flight_controller_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
flight_controller_ws/install/drone_offboard_missions/share/drone_offboard_missions/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
flight_controller_ws/log/: latest_build
flight_controller_ws/src/drone_keyboard_controller/: package.xml  setup.cfg  setup.py
flight_controller_ws/src/drone_keyboard_controller/config/: config0.yaml
flight_controller_ws/src/drone_keyboard_controller/drone_keyboard_controller/: command_control.py  keyboard_controller.py  offboard_control.py  param_trajectory.py  set_path_circle.py  set_path_continuous_setpoint.py  set_path_helix.py  set_path_hover.py  set_path_linear_setpoint.py  set_path_return.py  set_path_square.py
flight_controller_ws/src/drone_keyboard_controller/launch/: control_launch.py  demo_launch.py
flight_controller_ws/src/drone_offboard_missions/: setup.cfg  setup.py
flight_controller_ws/src/drone_offboard_missions/drone_offboard_missions/: offboard_control.py  offboard_control_L.py  offboard_control_circle.py  offboard_control_circle_tilted.py  offboard_control_helix.py  offboard_control_square.py  offboard_ex.py  offboard_hover.py
flight_controller_ws/src/vicon_position_bridge/: package.xml  setup.cfg  setup.py
(+55 files in other folders)
